Fix editor control button icons for dark mode
Dark layout icons had wrong shapes (rectangles instead of circle-with-dots).
Dark description and preFillName icons were missing entirely. Created correct
dark variants from light mode icons with proper dark theme colors.

--- a/src/scss/theme/dark/block.scss
+++ b/src/scss/theme/dark/block.scss
@@ -14,6 +14,7 @@
 			.icon.addCover { background-image: url('#{$themePath}/icon/add/cover1.svg'); }
 			.icon.layout { background-image: url('#{$themePath}/icon/add/layout1.svg'); }
 			.icon.relation { background-image: url('#{$themePath}/icon/add/relation1.svg'); }
+			.icon.description { background-image: url('#{$themePath}/icon/add/description1.svg'); }
 		}
     }
 }
