--- a/src/scss/theme/dark/common.scss
+++ b/src/scss/theme/dark/common.scss
@@ -297,12 +297,16 @@ html.themeDark {
 			.icon.addCover { background-image: url('#{$themePath}/icon/add/cover0.svg'); }
 			.icon.layout { background-image: url('#{$themePath}/icon/add/layout0.svg'); }
 			.icon.relation { background-image: url('#{$themePath}/icon/add/relation0.svg');  }
+			.icon.description { background-image: url('#{$themePath}/icon/add/description0.svg'); }
+			.icon.preFillName { background-image: url('#{$themePath}/icon/add/preFillName0.svg'); }
 		}
 		.btn:hover, .btn.hover {
 			.icon.icon { background-image: url('#{$themePath}/icon/add/icon1.svg'); }
 			.icon.addCover { background-image: url('#{$themePath}/icon/add/cover1.svg'); }
 			.icon.layout { background-image: url('#{$themePath}/icon/add/layout1.svg'); }
 			.icon.relation { background-image: url('#{$themePath}/icon/add/relation1.svg');  }
+			.icon.description { background-image: url('#{$themePath}/icon/add/description1.svg'); }
+			.icon.preFillName { background-image: url('#{$themePath}/icon/add/preFillName1.svg'); }
 		}
 	}
 
